# rbac-graph-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
ci/: Jenkinsfile
ci-safe/: Jenkinsfile
results/: s01_safe_readonly.json  s01_safe_readonly.md  s03_secrets_read.json  s03_secrets_read.md  s05_pod_exec.json  s05_pod_exec.md  summary.csv
scenarios/s01_safe_readonly/: manifests.yaml
scenarios/s02_cluster_admin/: expected.json  manifests.yaml
scenarios/s03_secrets_read/: manifests.yaml
scenarios/s04_wildcard/: manifests.yaml
scenarios/s05_pod_exec/: expected.json  manifests.yaml
scenarios/s06_rbac_modify/: manifests.yaml
scenarios_safe/s01_safe_readonly/: expected.json
src/: ci_gate.py  graph_build.py  loader.py  main.py  model.py  normalize.py  path_finder.py  path_finder_direct_graph.py  report.py  risk_rules.py
tests/: test_detection.py  test_parser.py
